fix: better dark mode colors for headings

--- a/assets/css/dark-mode.scss
+++ b/assets/css/dark-mode.scss
@@ -104,8 +104,16 @@
         color: #888;
     }
 
+    h2 {
+        color: #d3adff !important;
+    }
+
     h3 {
-        color: $primary !important;
+        color: #c797ff !important;
+    }
+    
+    h4 {
+        color: #bf86ff !important;
     }
 
     #county-map {
@@ -139,6 +147,15 @@
         }
     }
 
+    .accordion-button,
+    .accordion-button:not(.collapsed) {
+        color: #bf86ff;
+
+        &::after {
+            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23bf86ff'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+        }
+    }
+
     .totals th.row-head {
         padding: 8px 20px;
         color: rgba(255,255,255,0.7);
@@ -165,14 +182,6 @@
     
     .all-data td.na {
         color: rgba(255,255,255,0.4);
-    }
-
-    h3 {
-        color: $primary !important;
-    }
-    
-    h4 {
-        color: #8f44e6 !important;
     }
 
     footer {
